Meal plan files with some basic code (commit so I can update angular)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -131,7 +131,7 @@
         }
     </style>
 </head>
-<body>
+<body> <!--
 <div class="container">
     <div class="box black-box">
         <a class="box-content" [routerLink]="['/LogIn']">Let's get started</a>
@@ -158,7 +158,7 @@
             19:02
         </div>
     </div>
-</div>
+</div> -->
 <router-outlet></router-outlet>
 </body>
 </html>
