added circular image

--- a/src/app/default-header/default-header.component.html
+++ b/src/app/default-header/default-header.component.html
@@ -1,2 +1,11 @@
-<h1>Welcome to your homepage</h1>
-<p class="flush-text">Homepage is here</p>
+<div class="text">
+    <h1> {{title}}</h1>
+    <p class="flush-text">{{subtitle}}</p>
+</div>
+<div class="image">
+    <div class="profile-picture">
+        <img src="./assets/339504.jpg" alt="profile picture">
+    </div>
+
+</div>
+
