--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,22 +11,22 @@ $light-gray: #EBEBEB;
   max-width: 100%;
 }
 h1 {
-  font-size: 28px; //convert to em, pixels/16=em
+  font-size: 1.75em; //28px convert to em, pixels/16=em
 }
 h2 {
-  font-size: 22px;
+  font-size: 1.375em; //22px;
 }
 h3 {
-  font-size: 18px;
+  font-size: 1.125em; //18px;
 }
 p {
 
 }
 .text-large {
-  font-size: 18px;
+  font-size: 1.125em; //18px;
 }
 .text-small {
-  font-size: 18px;
+  font-size: 1.125em; //18px;
 }
 
 .flush-text {
