--- a/src/app/default-header/default-header.component.html
+++ b/src/app/default-header/default-header.component.html
@@ -1,11 +1,15 @@
-<div class="text">
-    <h1> {{title}}</h1>
-    <p class="flush-text">{{subtitle}}</p>
-</div>
-<div class="image">
-    <div class="profile-picture">
-        <img src="./assets/339504.jpg" alt="profile picture">
+
+<header>
+    <div class="text">
+        <h1> {{title}}</h1>
+        <p class="flush-text">{{subtitle}}</p>
+    </div>
+    <div class="image">
+        <div class="profile-picture">
+            <img src="./assets/339504.jpg" alt="profile picture">
+        </div>
+
     </div>
 
-</div>
+</header>
 
