--- a/src/app/default-header/default-header.component.scss
+++ b/src/app/default-header/default-header.component.scss
@@ -1,20 +1,21 @@
 
 .text {
-  width: 75%;
+  width: 83%;
   float: left;
 }
 
 .image {
-  width: 25%;
-  float: right;
-
+  width: 17%;
+  float: left;
+  padding-top: 5%;
+  padding-right: -3%;
 }
 
 .profile-picture {
   display: inline-block;
   position: relative;
-  width: 4em;
-  height: 4em;
+  width:  3.333em;
+  height: 3.333em;
   overflow: hidden;
   border-radius: 50%; }
 
