navigation to profile page on clicking picture

--- a/src/app/default-header/default-header.component.html
+++ b/src/app/default-header/default-header.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="image">
         <div class="profile-picture">
-            <img src="./assets/339504.jpg" alt="profile picture">
+            <img (click)="redirectToProfilePage()" src="./assets/339504.jpg" alt="profile picture">
         </div>
 
     </div>
