--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
     <title></title></head>
 <body>
 <router-outlet></router-outlet>
+<app-bottom-navigation></app-bottom-navigation>
 </body>
 </html>
