--- a/src/app/meal-plans/home/meal-plans-home.component.html
+++ b/src/app/meal-plans/home/meal-plans-home.component.html
@@ -16,9 +16,8 @@
     <section>
         <div class="family-container">
             <h2>Family 1</h2>
-            <button class="circular-button add">
-                <!-- Button content or functionality goes here -->
-            </button>
+            <button class="circular-button add" (click)="navigateToCalender()"></button>
+            <button class="circular-button plus" (click)="navigateToAddMealPlan()"></button>
         </div>
         <div class="container mt-4">
             <div class="card bg-light">
