--- a/src/app/meal-plans/home/meal-plans-home.component.scss
+++ b/src/app/meal-plans/home/meal-plans-home.component.scss
@@ -67,7 +67,14 @@
   align-self: center;
   background-image: url('/assets/calenderAdd.png');
   background-size: 65% 65%;
+}
 
+.plus {
+  margin-left: -10px;
+  margin-right: 20px;
+  align-self: center;
+  background-image: url('/assets/plus.png');
+  background-size: 50% 50%;
 }
 
 .refresh {
@@ -75,7 +82,6 @@
   align-self: center;
   background-image: url('/assets/refresh.png');
   background-size: 60% 60%;
-
 }
 
 .card-footer {
