--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,2 @@
-<p>home works!</p>
+<!DOCTYPE html>
+<app-default-header [title]= "'Home'" [subtitle]="'Let\'s setup som healthy meals'"> </app-default-header>
