--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- recipes.component.html -->
 <h1>Your Recipes</h1>
 <h4>Let's have a look at your favourites</h4>
 <h3>Your likes</h3>
@@ -27,4 +28,14 @@
         <p>{{ recipe.name }}</p>
     </div>
 </div>
+
+ <button class="recipe-generation" (click)="sendRecipeRequest()">
+     generate
+ </button>
+<div *ngIf="generatedrecipe; else noRecipe">
+    <p>{{ generatedrecipe }}</p>
+</div>
+<ng-template #noRecipe>
+    <p>No recipe generated yet.</p>
+</ng-template>
 <!-- Similar setup for disliked recipes -->
