--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,2 @@
 <!DOCTYPE html>
-<app-default-header [title]= "'Home'" [subtitle]="'Let\'s setup som healthy meals'"> </app-default-header>
+<app-default-header [title]= "'Home'" [subtitle]="'Let\'s setup some healthy meals'"> </app-default-header>
