--- a/src/app/bottom-navigation/bottom-navigation.component.scss
+++ b/src/app/bottom-navigation/bottom-navigation.component.scss
@@ -1,6 +1,7 @@
+@import '../../styles.scss';
+
 mat-tab-nav-bar {
   display: flex;
-  background-color: #2196f3; /* Change the background color as needed */
   justify-content: space-around; /* Adjust the spacing as needed */
   position: fixed;
   bottom: 0;
@@ -21,8 +22,8 @@ mat-tab-link {
 }
 
 .active-link {
-  color: #ffffff; /* Adjust the text color for the active tab */
+  color: $dark-green; /* Adjust the text color for the active tab */
   mat-icon {
-    color: #ffffff; /* Adjust the color for the active icon */
+    color: $dark-green; /* Adjust the color for the active icon */
   }
 }
