--- a/src/app/families/families.component.html
+++ b/src/app/families/families.component.html
@@ -1,2 +1,3 @@
 <!DOCTYPE html>
 <app-default-header [title]= "'Your Famillies'" [subtitle]="'How are the families looking today?'"> </app-default-header>
+<p>userid: {{currentUser.id}}</p>
