fixed global styling and of default header

--- a/src/app/default-header/default-header.component.html
+++ b/src/app/default-header/default-header.component.html
@@ -5,7 +5,6 @@
         <p class="flush-text">{{subtitle}}</p>
     </div>
     <div class="image">
-        <div class="profile-picture">
-            <img (click)="redirectToProfilePage()" [src]="imageurl" alt="profile picture">
-        </div>
+        <img (click)="redirectToProfilePage()" [src]="imageurl" class="profile-picture" alt="profile picture">
+
     </div>
