--- a/src/app/default-header/default-header.component.scss
+++ b/src/app/default-header/default-header.component.scss
@@ -7,19 +7,12 @@
   .image {
     width: 17%;
     float: left;
-    padding-top: 5%;
     padding-right: -3%;
   }
   
   .profile-picture {
-    display: inline-block;
-    position: relative;
-    width:  3.333em;
-    height: 3.333em;
-    overflow: hidden;
-    border-radius: 50%; }
-  
-  .profile-picture img {
-    width: auto;
-    height: 100%;
-    }
+    border-radius: 50%;
+    width: 3.33em;
+    height: 3.33em;
+    margin-right: 10px;
+  }
