--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <app-default-header [title]= "'Home'" [subtitle]="'Let\'s setup some healthy meals'"> </app-default-header>
 <h1>Upcoming Meals</h1>
-<h4>Let's have a look at your favourites</h4>
-<h3>Your likes</h3>
-<div class="upcoming-recipes">
-    <!-- recipes.component.html -->
+<div class="boxes">
     <div *ngFor="let recipe of recipes" class="recipe-small-view">
         <div class="image-with-border">
-            <img [src]="urls[0]" alt="Image of {{ recipe.recipe_name }}">
+            <img [src]="urls[0]" alt="Image of {{ recipe.recipe }}">
         </div>
         <p>{{ recipe.recipe_name }}</p>
     </div>
+</div>
+<h1>Preferred Recipes</h1>
+<div class="boxes">
+    <div *ngFor="let preferredRecipe of preferredRecipes" class="recipe-small-view">
+        <div class="image-with-border">
+            <img [src]="urls[0]" alt="Image of {{ preferredRecipe.recipe }}">
+        </div>
+        <p>{{ preferredRecipe.name }}</p>
+    </div>
+</div>
+<h1>Families</h1>
+<div class="boxes">
 </div>
