--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,5 @@
 /* Styles for the liked recipes container */
-.upcoming-recipes {
+.boxes {
     display: flex; /* Lays out the children in a line */
     overflow-x: auto; /* Enables horizontal scrolling */
     white-space: nowrap; /* Ensures the divs don't wrap */
